# Rust-HTTP

./: .env  .gitignore  Cargo.toml  Dockerfile  compose.yaml
src/: lib.rs  main.rs  old_profile.txt  old_services.txt  services.rs
src/endpoints/: auth.rs
src/experimental/chat/: lobby.rs  start_connection.rs  ws.rs
src/experimental/chat/actors/: connected_user.rs  lobby.rs  mod.rs  waiting_room.rs
src/middleware/: validator.rs
src/routes/: debug.rs  mod.rs
src/routes/app/: add.rs  add_bank.rs  bank_calls.rs  checker.rs  checkout.rs  delete_user.rs  force_server.rs  friends.rs  get_profile_pic.rs  get_user_info.rs  lobby_invite.rs  mod.rs  pos_things.rs  post_receipt.rs  search.rs  update_user.rs
src/routes/auth/: login.rs  register.rs
src/routes/ws/: ws.rs
src/services/: profile.rs
src/structs/: app_state.rs  bank_information.rs  friends_list.rs  lobby.rs  menu_item.rs  message.rs  mod.rs  receipt_item.rs  user.rs
src/websockets/: mod.rs  queries.rs
src/websockets/actors/: connected_user.rs  lobby.rs  waiting_room.rs
src/websockets/etc/: connection_pool.rs  mod.rs  ws_structs.rs
src/websockets/messages/: mod.rs  server_message.rs  user_message.rs
