[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.3.0"
actix-web-httpauth = "0.8.1"
chrono = { version = "0.4.22", features = ["serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres","chrono"] }
dotenv = "0.15.0"
serde = {version="1.0.193", features = ["derive"] }
serde_json = "1.0.86"
rand = "0.8.5"
futures = "0.3.29"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
argonautica = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.num]
features = [
    "serde",
]
num = "0.4.1"
num-bigint = "0.4.4"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
